--- a/register.html
+++ b/register.html
@@ -6,12 +6,52 @@
 <link rel="stylesheet" href="stylev.css">
 <title>User Registration</title>
 </head>
-<body>
-<form>
-    <h2>User Registration</h2>
-    <input id="v-text" type="text" name="fullname" placeholder="Full Name" required>
-    <input id="v-email" type="email" name="email" placeholder="Email" required>
-    <input id="v-pass" type="password" name="password" placeholder="Password" required>
+<body background="D:\gitdemo\inv.jpg">
+<form id="v-form1">
+    <h2 id="v-1">User Registration</h2>
+    <div>
+      <label><b>Name:</b></label>
+    <input class="v-reg" type="text" name="fullname" placeholder="Full Name" required>
+    </div>
+    <div>
+      <label><b>Mobile:</b></label>
+      <input class="v-reg" type="tel" name="mobile number" placeholder="Mobile" required>
+    </div>
+    <div>
+      <label><b>Email:</b></label>
+      <input class="v-reg" type="email" name="email" placeholder="Email" required>
+    </div>
+    <div>
+      <label><b>Password:</b></label>
+      <input class="v-reg" type="password" name="password" placeholder="Password" required>
+    </div>
+    <div>
+      <label><b>Confirm Password:</b></label>
+      <input class="v-reg" type="password" name="password" placeholder="Confirm Password" required>
+    </div>
+    <label><b>Gender:</b></label>
+    <br>
+    <br>
+    <div class="radio-inputs">
+        <label class="radio">
+          <input type="radio" name="radio" checked="">
+          <span class="name">Male</span>
+        </label>
+        <label class="radio">
+          <input type="radio" name="radio">
+          <span class="name">Female</span>
+        </label>
+            
+        <label class="radio">
+          <input type="radio" name="radio">
+          <span class="name">Other</span>
+        </label>
+    </div>
+    <br>
+    <div>
+      <label><b>Address:</b></label>
+        <textarea class="v-reg" name="address" placeholder="Address">Address</textarea>
+    </div>
     <input id="v-regsub" type="submit" value="Register">
 </form>
 </body>
