--- a/register.html
+++ b/register.html
@@ -6,9 +6,9 @@
 <link rel="stylesheet" href="stylev.css">
 <title>User Registration</title>
 </head>
-<body background="D:\gitdemo\inv.jpg">
-<form id="v-form1">
-    <h2 id="v-1">User Registration</h2>
+<body background="D:\gitdemo\inv2.jpg">
+<form class="v-form" id="v-form1">
+    <h2 class="h2-1" id="v-1">User Registration</h2>
     <div>
       <label><b>Name:</b></label>
     <input class="v-reg" type="text" name="fullname" placeholder="Full Name" required>
