--- a/login.html
+++ b/login.html
@@ -17,6 +17,8 @@
       <label><b>Password:</b></label>
       <input class="v-reg" type="password" name="password" placeholder="Password" required>
     </div>
+    <h6><a href="">Forgot Password?</a></h6>
+    <br>
     <input id="v-regsub" type="submit" value="Login">
     </form>
 </body>
