--- a/register.html
+++ b/register.html
@@ -53,6 +53,7 @@
         <textarea class="v-reg" name="address" placeholder="Address">Address</textarea>
     </div>
     <input id="v-regsub" type="submit" value="Register">
+    <p>Already have an account? <a href="D:\gitdemo\vamsi29\login.html" onclick="redirectToLogin()">Log in</a></p>
 </form>
 </body>
 </html>
