--- a/login.html
+++ b/login.html
@@ -20,6 +20,7 @@
     <h6><a href="">Forgot Password?</a></h6>
     <br>
     <input id="v-regsub" type="submit" value="Login">
+    <p>Don't have an account? <a href="D:\gitdemo\vamsi29\register.html" onclick="toggleForm()">Sign Up</a></p>
     </form>
 </body>
 </html>
