--- a/register.html
+++ b/register.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="stylev.css">
     <title>User Registration</title>
   </head>
-  <body background="D:\gitdemo\inv2.jpg">
+  <body background="D:\gitdemo\vamsi29\home-banner.webp">
     <form class="v-form" id="v-form1">
       <h2 class="h2-1" id="v-1">User Registration</h2>
       <div>
