--- a/register.html
+++ b/register.html
@@ -51,7 +51,7 @@
         <label><b>Address:</b></label>
         <textarea class="v-reg" name="address" placeholder="Address">Address</textarea>
       </div>
-      <input id="v-regsub" type="submit" value="Register">
+      <input class="v-regsub" type="submit" value="Register">
       <p>Already have an account? <a href="D:\gitdemo\vamsi29\login.html" onclick="redirectToLogin()">Log in</a></p>
     </form>
   </body>
