--- a/login.html
+++ b/login.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylev.css">
-    <title>Document</title>
+    <title>Login</title>
   </head>
   <body background="D:\gitdemo\vamsi29\360_F_355607062_zYMS8jaz4SfoykpWz5oViRVKL32IabTP.jpg">
     <form class="v-form" id="v-form2">
-      <h2 class="h2-1" id="v-1">Login</h2>
+      <h2 class="h2-1" id="v-1">LOGIN</h2>
       <div>
         <label><b>Username:</b></label>
         <input class="v-reg" type="text" name="Username" placeholder="Username" required>
