--- a/register.html
+++ b/register.html
@@ -4,30 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylev.css">
-    <title>User Registration</title>
+    <title>Sign up</title>
   </head>
   <body background="D:\gitdemo\vamsi29\360_F_355607062_zYMS8jaz4SfoykpWz5oViRVKL32IabTP.jpg">
     <form class="v-form" id="v-form1">
-      <h2 class="h2-1" id="v-1">User Registration</h2>
+      <h2 class="h2-1" id="v-1">SIGN UP</h2>
       <div>
-        <label><b>Name:</b></label>
-        <input class="v-reg" type="text" name="fullname" placeholder="Full Name" required>
+        <label><b>First Name:</b></label>
+        <input class="v-reg" type="text" name="firstname" placeholder="First Name" required>
       </div>
       <div>
-        <label><b>Mobile:</b></label>
-        <input class="v-reg" type="tel" name="mobile number" placeholder="Mobile" required>
+        <label><b>Last Name:</b></label>
+        <input class="v-reg" type="text" name="lastname" placeholder="Last Name" required>
       </div>
       <div>
-        <label><b>Email:</b></label>
-        <input class="v-reg" type="email" name="email" placeholder="Email" required>
-      </div>
-      <div>
-        <label><b>Password:</b></label>
-        <input class="v-reg" type="password" name="password" placeholder="Password" required>
-      </div>
-      <div>
-        <label><b>Confirm Password:</b></label>
-        <input class="v-reg" type="password" name="password" placeholder="Confirm Password" required>
+        <label><b>DOB:</b></label>
+        <input class="v-reg" type="date" name="dob" placeholder="" required>
       </div>
       <label><b>Gender:</b></label>
       <br>
@@ -49,9 +41,26 @@
       <br>
       <div>
         <label><b>Address:</b></label>
-        <textarea class="v-reg" name="address" placeholder="Address">Address</textarea>
+        <textarea class="v-reg" name="address" placeholder="Address"></textarea>
       </div>
-      <input class="v-regsub" type="submit" value="Register">
+      <div>
+        <label><b>Mobile No.:</b></label>
+        <input class="v-reg" type="tel" name="mobile number" placeholder="Mobile" required>
+      </div>
+      <div>
+        <label><b>Email:</b></label>
+        <input class="v-reg" type="email" name="email" placeholder="Email" required>
+      </div>
+      <div>
+        <label><b>Password:</b></label>
+        <input class="v-reg" type="password" name="password" placeholder="Password" required>
+      </div>
+      <div>
+        <label><b>Confirm Password:</b></label>
+        <input class="v-reg" type="password" name="password" placeholder="Confirm Password" required>
+      </div>
+      <br>
+      <input class="v-regsub" type="submit" value="Sign up">
       <p>Already have an account? <a href="D:\gitdemo\vamsi29\login.html" onclick="redirectToLogin()">Log in</a></p>
     </form>
   </body>
